# llmap

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agent/workflows/: gh-work-issue.md  release.md
cartographer/: __init__.py  cli.py  config.py  detector.py  modules.py  state.py
cartographer/parser/: base.py  cpp.py
llmap/: __init__.py  cli.py  config.py  generator.py  llm.py  modules.py
llmap/parser/: __init__.py  base.py  cpp.py
